--- a/examples/test.html
+++ b/examples/test.html
@@ -97,11 +97,54 @@
 <div style="background-color:rgb(190,177,55);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(104,152,11);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
+<img src="images/all_black.png" width="200"><br>
+<div style="background-color:rgb(0,0,0);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="images/blue.jpeg" width="200"><br>
+<div style="background-color:rgb(6,23,92);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(1,55,163);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(178,4,63);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
 <img src="images/british-flag-medium.jpg" width="200"><br>
 <div style="background-color:rgb(207,20,43);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(253,253,253);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(0,35,124);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(10,43,133);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="images/dancers.jpeg" width="200"><br>
+<div style="background-color:rgb(241,237,235);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(29,173,166);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(40,69,59);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(159,110,90);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(185,140,114);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(33,136,119);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="images/demon.png" width="200"><br>
+<div style="background-color:rgb(4,1,1);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(251,17,17);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(224,224,224);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(0,228,0);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="images/dots_blue.png" width="200"><br>
+<div style="background-color:rgb(155,211,242);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(36,248,111);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(116,19,237);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(255,1,1);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="images/dots_white.png" width="200"><br>
+<div style="background-color:rgb(254,254,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(36,248,111);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(116,19,237);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(255,1,1);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="images/flag001.png" width="200"><br>
+<div style="background-color:rgb(254,254,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(207,20,43);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(0,36,125);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="images/flag002.png" width="200"><br>
+<div style="background-color:rgb(231,0,19);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(254,254,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="images/giant-panda-shutterstock_86500690.jpg" width="200"><br>
 <div style="background-color:rgb(45,68,25);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
@@ -110,6 +153,12 @@
 <div style="background-color:rgb(152,166,86);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(140,116,87);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
+<img src="images/large.jpg" width="200"><br>
+<div style="background-color:rgb(207,205,212);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(190,154,89);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(76,56,27);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(151,113,48);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
 <img src="images/mac_os_x_retina_zebras-wallpaper-1920x1080.jpg" width="200"><br>
 <div style="background-color:rgb(47,81,36);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(92,155,40);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
@@ -117,6 +166,20 @@
 <div style="background-color:rgb(148,184,63);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(111,149,162);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(90,110,147);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="images/orange.jpg" width="200"><br>
+<div style="background-color:rgb(235,93,64);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(249,158,37);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(247,230,216);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(28,10,16);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(91,47,145);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="images/people.jpg" width="200"><br>
+<div style="background-color:rgb(218,11,6);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(31,11,22);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(243,83,239);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(0,236,230);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(223,238,245);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
 <img src="images/sample1_l.jpg" width="200"><br>
 <div style="background-color:rgb(79,87,71);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
@@ -142,4 +205,11 @@
 <div style="background-color:rgb(108,153,25);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(146,194,34);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(27,116,249);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<br><br><br>
+<img src="images/with_transparency.png" width="200"><br>
+<div style="background-color:rgb(237,65,141);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(33,163,221);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(241,104,119);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(248,163,90);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
+<div style="background-color:rgb(48,103,178);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
